--- a/public/sobre.html
+++ b/public/sobre.html
@@ -193,8 +193,30 @@
                         </div>
                     </div>
                 </div>
+
+                <!-- Dr. Joadno -->
+                <div class="team-card">
+                    <div class="team-image">
+                        <i class="fas fa-gavel"></i>
+                    </div>
+                    <div class="team-info">
+                        <div class="team-name">Dr. Joadno de Deus Ribeiro</div>
+                        <div class="team-role">Advogado Parceiro - RJ</div>
+                        <p class="team-description">
+                            Advogado especialista em Direito de Trânsito com mais de 20 anos de experiência na área,
+                            atuando no Rio de Janeiro e em todos os estados brasileiros.
+                        </p>
+                        <div class="team-contact">
+                            <p><strong>OAB/RJ:</strong> nº 199312</p>
+                            <p><strong>Telefone:</strong> (21) 974490650</p>
+                            <p><strong>WhatsApp:</strong> (21) 96457-8305</p>
+                            <p><strong>Email:</strong> joadno@avianca.com.br</p>
+                            <p><strong>Endereço:</strong> Avenida Rio Branco, nº 120, sala 603, Centro<br>Rio de
+                                Janeiro/RJ - CEP: 20040-001</p>
+                        </div>
+                    </div>
+                </div>
             </div>
-        </div>
     </section>
 
     <!-- Certificações -->
