--- a/public/crm.html
+++ b/public/crm.html
@@ -90,6 +90,11 @@
             </nav>
 
             <div class="sidebar-footer">
+                <div class="menu-item" onclick="openChangePasswordModal()"
+                    style="cursor: pointer; margin-bottom: 10px;">
+                    <span class="menu-icon"><i class="fas fa-key"></i></span>
+                    <span>Alterar Senha</span>
+                </div>
                 <button class="btn-logout" id="logout-btn">
                     <i class="fas fa-sign-out-alt"></i> Sair
                 </button>
@@ -145,6 +150,14 @@
                     <div class="form-group">
                         <label class="form-label">Observações</label>
                         <textarea id="client-notes" class="form-input" rows="3"></textarea>
+                    </div>
+                    <div class="form-group">
+                        <label class="form-label">Tipo de Cliente *</label>
+                        <select id="client-partnership" class="form-input" required>
+                            <option value="">Selecione...</option>
+                            <option value="PARTICULAR">Particular</option>
+                            <option value="AVADA">Parceria AVADA</option>
+                        </select>
                     </div>
                 </form>
             </div>
@@ -399,6 +412,37 @@
                         <i class="fas fa-spinner fa-spin"></i> Enviando arquivo...
                     </div>
                 </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Change Password Modal -->
+    <div id="change-password-modal" class="modal">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h2 class="modal-title">Alterar Senha</h2>
+                <button class="modal-close" onclick="closeChangePasswordModal()">×</button>
+            </div>
+            <div class="modal-body">
+                <form id="change-password-form">
+                    <div class="form-group">
+                        <label class="form-label">Senha Atual *</label>
+                        <input type="password" id="current-password" class="form-input" required>
+                    </div>
+                    <div class="form-group">
+                        <label class="form-label">Nova Senha *</label>
+                        <input type="password" id="new-password" class="form-input" required minlength="6">
+                        <small style="color: #718096;">Mínimo de 6 caracteres</small>
+                    </div>
+                    <div class="form-group">
+                        <label class="form-label">Confirmar Nova Senha *</label>
+                        <input type="password" id="confirm-password" class="form-input" required>
+                    </div>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button class="btn btn-secondary" onclick="closeChangePasswordModal()">Cancelar</button>
+                <button class="btn btn-primary" onclick="submitPasswordChange()">Alterar Senha</button>
             </div>
         </div>
     </div>
