Add 11 process categories and 17 phase types to form

--- a/public/crm.html
+++ b/public/crm.html
@@ -189,13 +189,24 @@
                         <input type="text" id="process-case-number" class="form-input" required>
                     </div>
 
-                    <!-- TIPO DE PROCESSO -->
+                    <!-- CATEGORIA DE PROCESSO -->
                     <div class="form-group">
-                        <label class="form-label">Tipo de Processo *</label>
-                        <select id="process-type" class="form-input" required>
+                        <label class="form-label">Categoria de Processo *</label>
+                        <select id="process-category" class="form-input" required>
                             <option value="">Selecione...</option>
-                            <option value="Administrativo">1. Administrativo</option>
-                            <option value="Judicial">2. Judicial</option>
+                            <option value="Cível (Comum)">1. Cível (Comum)</option>
+                            <option value="Trânsito Judicial">2. Trânsito Judicial</option>
+                            <option value="Trânsito Administrativo">3. Trânsito Administrativo</option>
+                            <option value="Trânsito Administrativo + Judicial">4. Trânsito Administrativo + Judicial
+                            </option>
+                            <option value="Perícia em Acidente de Trânsito">5. Perícia em Acidente de Trânsito</option>
+                            <option value="Perícia em Documentos">6. Perícia em Documentos</option>
+                            <option value="Perícia Calculista">7. Perícia Calculista</option>
+                            <option value="Análise Contrato Financiamento">8. Análise Contrato Financiamento</option>
+                            <option value="Análise Contrato Empréstimo Consignado">9. Análise Contrato Empréstimo
+                                Consignado</option>
+                            <option value="Análise Contrato Trabalhista">10. Análise Contrato Trabalhista</option>
+                            <option value="Análise Previdenciário">11. Análise Previdenciário</option>
                         </select>
                     </div>
 
@@ -208,16 +219,21 @@
                             <option value="Recurso à JARI">2. Recurso à JARI</option>
                             <option value="Recurso ao CETRAN">3. Recurso ao CETRAN</option>
                             <option value="Recurso ao Colegiado da JARI">4. Recurso ao Colegiado da JARI</option>
-                            <option value="Petição Inicial (sempre solicite gratuidade de justiça)">5. Petição Inicial
-                                (sempre solicite gratuidade de justiça)</option>
-                            <option value="Embargos de Declaração (sempre solicite gratuidade de justiça)">6. Embargos
-                                de Declaração (sempre solicite gratuidade de justiça)</option>
-                            <option value="Recurso Inominado (sempre solicite gratuidade de justiça)">7. Recurso
-                                Inominado (sempre solicite gratuidade de justiça)</option>
-                            <option value="Recurso em Agravo de Instrumento (sempre solicite gratuidade de justiça)">8.
-                                Recurso em Agravo de Instrumento (sempre solicite gratuidade de justiça)</option>
-                            <option value="Recurso Especial (sempre solicite gratuidade de justiça)">9. Recurso Especial
-                                (sempre solicite gratuidade de justiça)</option>
+                            <option value="Petição Inicial">5. Petição Inicial</option>
+                            <option value="Embargos de Declaração">6. Embargos de Declaração</option>
+                            <option value="Recurso Inominado">7. Recurso Inominado</option>
+                            <option value="Recurso em Agravo de Instrumento">8. Recurso em Agravo de Instrumento
+                            </option>
+                            <option value="Recurso Especial">9. Recurso Especial</option>
+                            <option value="Pedido de Uniformização de Jurisprudências">10. Pedido de Uniformização de
+                                Jurisprudências</option>
+                            <option value="Recurso Extraordinário">11. Recurso Extraordinário</option>
+                            <option value="Réplica à Contestação">12. Réplica à Contestação</option>
+                            <option value="Cumprimento de Sentença">13. Cumprimento de Sentença</option>
+                            <option value="Manifestação">14. Manifestação</option>
+                            <option value="Emenda à Inicial">15. Emenda à Inicial</option>
+                            <option value="Pedido de Autotutela">16. Pedido de Autotutela</option>
+                            <option value="Parecer Técnico">17. Parecer Técnico</option>
                             <option
                                 value="Pedido de Uniformização de Jurisprudências (sempre solicite gratuidade de justiça)">
                                 10. Pedido de Uniformização de Jurisprudências (sempre solicite gratuidade de justiça)
