Fix: resolve process modal crash (missing IDs and type mapping)

--- a/public/crm.html
+++ b/public/crm.html
@@ -182,6 +182,7 @@
             <div class="modal-body">
                 <form id="process-form">
                     <input type="hidden" id="process-id">
+                    <input type="hidden" id="process-partnership" value="AVADA">
                     <div class="form-group">
                         <label class="form-label">Cliente *</label>
                         <select id="process-client" class="form-input" required>
