--- a/public/crm.html
+++ b/public/crm.html
@@ -421,9 +421,49 @@
                         <label class="form-label">Descrição</label>
                         <textarea id="process-description" class="form-input" rows="3"></textarea>
                     </div>
-                    <div class="form-group">
-                        <label class="form-label">Prazo</label>
-                        <input type="date" id="process-deadline" class="form-input">
+                    <!-- CALCULADORA DE PRAZOS -->
+                    <div class="form-group"
+                        style="background: #f8f9fa; padding: 15px; border-radius: 8px; border: 1px solid #e2e8f0;">
+                        <label class="form-label"
+                            style="color: #2d3748; font-weight: 600; margin-bottom: 10px; display: block;">
+                            <i class="fas fa-calculator"></i> Calculadora de Prazos
+                        </label>
+
+                        <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 10px; margin-bottom: 10px;">
+                            <div>
+                                <label class="form-label" style="font-size: 0.85rem;">Tipo de Data</label>
+                                <select id="deadline-type" class="form-input" onchange="calculateDeadline()">
+                                    <option value="publicacao">Data da Publicação (DJe)</option>
+                                    <option value="notificacao">Data da Notificação</option>
+                                </select>
+                            </div>
+                            <div>
+                                <label class="form-label" style="font-size: 0.85rem;">Dias Úteis</label>
+                                <select id="deadline-days" class="form-input" onchange="calculateDeadline()">
+                                    <option value="5">5 Dias</option>
+                                    <option value="10">10 Dias</option>
+                                    <option value="15">15 Dias</option>
+                                    <option value="30">30 Dias</option>
+                                </select>
+                            </div>
+                        </div>
+
+                        <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 10px;">
+                            <div>
+                                <label class="form-label" style="font-size: 0.85rem;">Data Inicial</label>
+                                <input type="date" id="deadline-start-date" class="form-input"
+                                    onchange="calculateDeadline()">
+                            </div>
+                            <div>
+                                <label class="form-label" style="font-size: 0.85rem;">Prazo Fatal</label>
+                                <input type="date" id="process-deadline" class="form-input" readonly
+                                    style="background-color: #e2e8f0; font-weight: bold; color: #2d3748;">
+                            </div>
+                        </div>
+                        <div id="deadline-info"
+                            style="font-size: 0.8rem; color: #718096; margin-top: 8px; font-style: italic;">
+                            Selecione a data para calcular automaticamente.
+                        </div>
                     </div>
                 </form>
             </div>
