FEATURE: Add Calculadora de Prazos with Gemini AI integration and complete CPC/CNJ logic

--- a/public/crm.html
+++ b/public/crm.html
@@ -83,6 +83,10 @@
                     <span class="menu-icon"><i class="fas fa-archive"></i></span>
                     <span>Arquivados</span>
                 </div>
+                <div class="menu-item" onclick="window.open('calculadora.html', '_blank')" style="cursor: pointer;">
+                    <span class="menu-icon"><i class="fas fa-calculator"></i></span>
+                    <span>Calculadora de Prazos</span>
+                </div>
                 <div class="menu-item admin-only hidden" data-view="system-info">
                     <span class="menu-icon"><i class="fas fa-info-circle"></i></span>
                     <span>Informações do Sistema</span>
